--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,5 +15,10 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-redux": "^7.2.3"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.2.5",
+    "postcss": "^8.2.10",
+    "tailwindcss": "^2.1.1"
   }
 }
