--- a/strapi-mongodb/api/order/models/order.settings.json
+++ b/strapi-mongodb/api/order/models/order.settings.json
@@ -91,6 +91,13 @@
     },
     "postCode": {
       "type": "integer"
+    },
+    "email": {
+      "type": "email"
+    },
+    "phone": {
+      "type": "string",
+      "required": true
     }
   }
 }
