--- a/next-toolkit/package.json
+++ b/next-toolkit/package.json
@@ -26,6 +26,7 @@
     "js-cookie": "^2.2.1",
     "moment": "^2.29.1",
     "next": "^10.1.3",
+    "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-moment": "^1.1.1",
