--- a/next-toolkit/package.json
+++ b/next-toolkit/package.json
@@ -31,6 +31,7 @@
     "react-dom": "16.13.1",
     "react-moment": "^1.1.1",
     "react-redux": "^7.2.0",
+    "react-responsive-carousel": "^3.2.18",
     "react-toastify": "^7.0.3",
     "redux": "^4.0.5",
     "swr": "^0.5.5",
