--- a/next-toolkit/package.json
+++ b/next-toolkit/package.json
@@ -30,6 +30,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-moment": "^1.1.1",
+    "react-paginate": "^7.1.2",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.18",
     "react-toastify": "^7.0.3",
