email sending setup

--- a/strapi-mongodb/package.json
+++ b/strapi-mongodb/package.json
@@ -19,6 +19,8 @@
     "strapi-plugin-email": "3.5.4",
     "strapi-plugin-upload": "3.5.4",
     "strapi-plugin-users-permissions": "3.5.4",
+    "strapi-provider-email-mailgun": "^3.6.1",
+    "strapi-provider-email-sendgrid": "^3.6.1",
     "strapi-utils": "3.5.4"
   },
   "author": {
