--- a/next-toolkit/package.json
+++ b/next-toolkit/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/react-fontawesome": "^0.1.14",
     "@reduxjs/toolkit": "^1.2.5",
     "axios": "^0.21.1",
+    "focus-visible": "^5.2.0",
     "formik": "^2.2.6",
     "framer-motion": "^4.1.4",
     "js-cookie": "^2.2.1",
@@ -30,6 +31,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-moment": "^1.1.1",
+    "react-multi-carousel": "^2.6.2",
     "react-paginate": "^7.1.2",
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.18",
