--- a/next-toolkit/package.json
+++ b/next-toolkit/package.json
@@ -28,6 +28,7 @@
     "moment": "^2.29.1",
     "next": "^10.1.3",
     "nprogress": "^0.2.0",
+    "qs": "^6.10.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-moment": "^1.1.1",
@@ -36,6 +37,7 @@
     "react-redux": "^7.2.0",
     "react-responsive-carousel": "^3.2.18",
     "react-toastify": "^7.0.3",
+    "react-transition-group": "^4.4.1",
     "redux": "^4.0.5",
     "swr": "^0.5.5",
     "yup": "^0.32.9"
