coupon implementation, cart update, error handler

--- a/strapi-mongodb/api/product/models/product.settings.json
+++ b/strapi-mongodb/api/product/models/product.settings.json
@@ -52,8 +52,11 @@
       "dominant": true
     },
     "reviews": {
-      "via": "product",
-      "collection": "review"
+      "collection": "review",
+      "via": "product"
+    },
+    "discount": {
+      "type": "decimal"
     }
   }
 }
