--- a/strapi-mongodb/api/review/models/review.settings.json
+++ b/strapi-mongodb/api/review/models/review.settings.json
@@ -45,8 +45,8 @@
       "required": false
     },
     "product": {
-      "model": "product",
-      "via": "reviews"
+      "via": "reviews",
+      "model": "product"
     }
   }
 }
